# Consulta-API-Portal-Transparencia

./: .env  .gitignore  ConsultaAPI.py  ControladorAplicacao.py  GravadorCSV.py  LeitorCSV.py  README.md  ValidarDados.py  dados-cpfs.csv  main.py  pyproject.toml
.obsidian/: workspace.json
