[project]
name = "consulta-api-portal-da-trasparencia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "logging",
    "toml",
    "pycodestyle",
    "bandit",
    "pylint",
    "radon",
    "pydantic",
    "pandas",
]
