[project]
name = "consulta-api-portal-da-trasparencia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "logging",
    "dotenv",
    "pycodestyle",
    "bandit",
    "radon",
    "pydantic",
    "pandas",
    "ruff",
]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "S", "C90"]
ignore = ["E501"]

[tool.ruff.mccabe]
max-complexity = 10
