[project]
name = "consulta-api-portal-da-trasparencia"
version = "0.1.0"
description = "Programa de consulta à API do Portal da Transparência"
authors = ["Marcos Paulo <paulo.marcos1@escolar.ifrn.edu.br>"]
license = [text = "Apache 2.0"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "logging",
    "dotenv",
    "radon",
    "pydantic",
    "pandas",
    "ruff",
]

[tool.ruff]
line-length = 120
output-format = "grouped"

[tool.ruff.lint]
select = ["E", "W", "S", "C90", "LOG", "G"]
ignore = ["E501", "G004"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"LeitorCSV.py" = ["F401"]
"GravadorCSV.py" = ["F401"]
"ValidarDados.py" = ["F401"]
"ConsultaAPI.py" = ["F401"]
"ControladorAplicacao.py" = ["F401"]
"main.py" = ["F401"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
